# ComStudio

./: README.md
ComStudio/: CMakeLists.txt  README.md
ComStudio/assets/icons/: .gitkeep  Untitled 02.nsi
ComStudio/assets/styles/: app.qss
ComStudio/include/core/: BaseProtocol.h  GenericDataPacket.h  LineParser.h  ParserConfig.h  ProtocolHandler.h  SerialManager.h
ComStudio/include/models/: DataBuffer.h
ComStudio/include/ui/: AutoSendDialog.h  ChannelPlotWindow.h  MainWindow.h  ParserConfigWidget.h  PlotterWidget.h  RecordingWidget.h  SerialSettingsWidget.h  TerminalWidget.h
ComStudio/src/: main.cpp
ComStudio/src/core/: LineParser.cpp  ProtocolHandler.cpp  SerialManager.cpp
ComStudio/src/models/: DataBuffer.cpp
ComStudio/src/ui/: AutoSendDialog.cpp  ChannelPlotWindow.cpp  MainWindow.cpp  MainWindow.ui  ParserConfigWidget.cpp  PlotterWidget.cpp  RecordingWidget.cpp  SerialSettingsWidget.cpp  SerialSettingsWidget.ui  TerminalWidget.cpp
